# Glance-MultiModalRetrival

./: .gitignore  README.md  pyproject.toml  requirements.txt
baseline/: README.md  indexer.py  retriever.py
baseline/results/: baseline1_fashionpedia_qwen.json  baseline2_attention_gru.json
report/: submission_checklist.md  submission_report.md
solution/: DATASET_CARD.md  README.md  app.py  indexer.py  retriever.py
solution/artifacts/results/: binding_fixed_prompt_examples.json  comparison.json  direct_semantic_binding_weight_tuning.json  fashionpedia_1000_data_summary.json  generative_attribute_flan_t5.json  qualitative_test_retrievals.json  semantic_id_hybrid_binding_fixed_qwen.json  smoke.json  smoke_data_summary.json  smoke_semantic_id.json  tuned_prompt_examples.json
solution/config/: default.yaml
solution/data/processed/fashionpedia_1000/: metadata.jsonl  queries_auto_test.jsonl  queries_auto_validation.jsonl
solution/data/processed/fashionpedia_small/: colors.jsonl  environments.jsonl
solution/data/smoke/: metadata.jsonl  queries.jsonl
solution/scripts/: make_smoke_data.py
solution/src/fashion_retrieval/: __init__.py  attention_gru.py  classical.py  cli.py  datasets.py  encoder.py  fashionpedia_analysis.py  generative_semantic_id.py  index.py  metrics.py  parser.py  plots.py  retriever.py  schema.py  semantic_id.py  training.py
solution/src/fashion_retrieval/models/: __init__.py  attentive_gru.py  rqvae.py  siamese.py
solution/tests/: test_retrieval.py
